Fix children comment incorrectly collapsed

--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -149,7 +149,7 @@
   &__message {
     margin: 2px 0;
 
-    .@{_top}--clip & {
+    .@{_top}__main--clip & {
       height: calc(var(--line-height) * var(--clip-lines));
       overflow: hidden;
 
